[gd_scene load_steps=7 format=3 uid="uid://cgrvo2f81b5j"]

[ext_resource type="Script" path="res://BeesManager.gd" id="2_gqdln"]
[ext_resource type="Texture2D" uid="uid://da4wenbvxckce" path="res://keyhole.png" id="2_vra3p"]
[ext_resource type="Script" path="res://Key.gd" id="3_tllqe"]
[ext_resource type="Texture2D" uid="uid://bfx2onk2tucbc" path="res://key.png" id="4_4ios7"]
[ext_resource type="Texture2D" uid="uid://c15csurjju7bp" path="res://key_highlihgt.png" id="5_wws15"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpo28"]
size = Vector2(109.375, 46.5)

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BeesManager" type="Node2D" parent="."]
script = ExtResource("2_gqdln")

[node name="Keyhole" type="Area2D" parent="."]
position = Vector2(172, -200)
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Keyhole"]
scale = Vector2(2, 2)
texture = ExtResource("2_vra3p")

[node name="Key" type="RigidBody2D" parent="."]
position = Vector2(-243, 108)
collision_mask = 2
input_pickable = true
gravity_scale = 2.66454e-15
script = ExtResource("3_tllqe")
tex_normal = ExtResource("4_4ios7")
tex_hover = ExtResource("5_wws15")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Key"]
scale = Vector2(8, 8)
texture = ExtResource("4_4ios7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
shape = SubResource("RectangleShape2D_tpo28")

[connection signal="mouse_entered" from="Key" to="Key" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Key" to="Key" method="_on_mouse_exited"]
